--- a/notepad.ipynb
+++ b/notepad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +172,7 @@
        "      <th>Команда</th>\n",
        "      <th>Игрок</th>\n",
        "      <th>Счет</th>\n",
+       "      <th>Отклонение от ср.</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -180,147 +181,167 @@
        "      <td>Infinity</td>\n",
        "      <td>payk</td>\n",
        "      <td>46.661358</td>\n",
+       "      <td>3.120443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Infinity</td>\n",
        "      <td>Vitaly</td>\n",
        "      <td>36.940895</td>\n",
+       "      <td>2.262075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Infinity</td>\n",
        "      <td>Lumpy</td>\n",
        "      <td>34.601051</td>\n",
+       "      <td>2.055454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Infinity</td>\n",
        "      <td>MoOz</td>\n",
        "      <td>22.129986</td>\n",
+       "      <td>0.954194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Infinity</td>\n",
        "      <td>Gardick</td>\n",
        "      <td>14.758884</td>\n",
+       "      <td>0.303287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Mad Kings</td>\n",
        "      <td>Adrian</td>\n",
        "      <td>11.737532</td>\n",
+       "      <td>0.036486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Mad Kings</td>\n",
        "      <td>Mr.Jeans</td>\n",
        "      <td>10.994401</td>\n",
+       "      <td>-0.029137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>BOOM Esports</td>\n",
        "      <td>SLATEM$</td>\n",
        "      <td>8.349350</td>\n",
+       "      <td>-0.262709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BOOM Esports</td>\n",
        "      <td>Pakazs</td>\n",
        "      <td>7.583850</td>\n",
+       "      <td>-0.330306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>BOOM Esports</td>\n",
        "      <td>Sacred</td>\n",
        "      <td>6.965750</td>\n",
+       "      <td>-0.384888</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>BOOM Esports</td>\n",
        "      <td>Matthew</td>\n",
        "      <td>6.124000</td>\n",
+       "      <td>-0.459219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BOOM Esports</td>\n",
        "      <td>Mjz</td>\n",
        "      <td>5.301750</td>\n",
+       "      <td>-0.531828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Mad Kings</td>\n",
        "      <td>Genek</td>\n",
        "      <td>3.018792</td>\n",
+       "      <td>-0.733425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>BocaJuniors</td>\n",
        "      <td>Italiano Gangstar</td>\n",
        "      <td>2.959300</td>\n",
+       "      <td>-0.738678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Mad Kings</td>\n",
        "      <td>Smash</td>\n",
        "      <td>2.560543</td>\n",
+       "      <td>-0.773891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>BocaJuniors</td>\n",
        "      <td>Parker</td>\n",
        "      <td>2.409250</td>\n",
+       "      <td>-0.787251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>BocaJuniors</td>\n",
        "      <td>Latotronii</td>\n",
        "      <td>1.915800</td>\n",
+       "      <td>-0.830825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>BocaJuniors</td>\n",
        "      <td>Mariano</td>\n",
        "      <td>1.558800</td>\n",
+       "      <td>-0.862350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Mad Kings</td>\n",
        "      <td>Yadomi</td>\n",
        "      <td>1.317515</td>\n",
+       "      <td>-0.883657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>BocaJuniors</td>\n",
        "      <td>Accel</td>\n",
        "      <td>-1.401700</td>\n",
+       "      <td>-1.123777</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Команда              Игрок       Счет\n",
-       "15      Infinity               payk  46.661358\n",
-       "17      Infinity             Vitaly  36.940895\n",
-       "16      Infinity              Lumpy  34.601051\n",
-       "18      Infinity               MoOz  22.129986\n",
-       "19      Infinity            Gardick  14.758884\n",
-       "5      Mad Kings             Adrian  11.737532\n",
-       "6      Mad Kings           Mr.Jeans  10.994401\n",
-       "1   BOOM Esports            SLATEM$   8.349350\n",
-       "0   BOOM Esports             Pakazs   7.583850\n",
-       "2   BOOM Esports             Sacred   6.965750\n",
-       "3   BOOM Esports            Matthew   6.124000\n",
-       "4   BOOM Esports                Mjz   5.301750\n",
-       "8      Mad Kings              Genek   3.018792\n",
-       "12   BocaJuniors  Italiano Gangstar   2.959300\n",
-       "7      Mad Kings              Smash   2.560543\n",
-       "10   BocaJuniors             Parker   2.409250\n",
-       "11   BocaJuniors         Latotronii   1.915800\n",
-       "13   BocaJuniors            Mariano   1.558800\n",
-       "9      Mad Kings             Yadomi   1.317515\n",
-       "14   BocaJuniors              Accel  -1.401700"
+       "         Команда              Игрок       Счет  Отклонение от ср.\n",
+       "15      Infinity               payk  46.661358           3.120443\n",
+       "17      Infinity             Vitaly  36.940895           2.262075\n",
+       "16      Infinity              Lumpy  34.601051           2.055454\n",
+       "18      Infinity               MoOz  22.129986           0.954194\n",
+       "19      Infinity            Gardick  14.758884           0.303287\n",
+       "5      Mad Kings             Adrian  11.737532           0.036486\n",
+       "6      Mad Kings           Mr.Jeans  10.994401          -0.029137\n",
+       "1   BOOM Esports            SLATEM$   8.349350          -0.262709\n",
+       "0   BOOM Esports             Pakazs   7.583850          -0.330306\n",
+       "2   BOOM Esports             Sacred   6.965750          -0.384888\n",
+       "3   BOOM Esports            Matthew   6.124000          -0.459219\n",
+       "4   BOOM Esports                Mjz   5.301750          -0.531828\n",
+       "8      Mad Kings              Genek   3.018792          -0.733425\n",
+       "12   BocaJuniors  Italiano Gangstar   2.959300          -0.738678\n",
+       "7      Mad Kings              Smash   2.560543          -0.773891\n",
+       "10   BocaJuniors             Parker   2.409250          -0.787251\n",
+       "11   BocaJuniors         Latotronii   1.915800          -0.830825\n",
+       "13   BocaJuniors            Mariano   1.558800          -0.862350\n",
+       "9      Mad Kings             Yadomi   1.317515          -0.883657\n",
+       "14   BocaJuniors              Accel  -1.401700          -1.123777"
       ]
      },
      "metadata": {},
@@ -402,7 +423,6 @@
     "        teams_scores[team_name] += player_scores[player_name]\n",
     "    teams_scores[team_name] /= len(team)\n",
     "\n",
-    "\n",
     "# Calculate players table\n",
     "players_df_schema = {\n",
     "    'Команда': 'str',\n",
@@ -414,6 +434,13 @@
     "    players_df.loc[i] = (player_teams[p_name], p_name, player_scores[p_name])\n",
     "\n",
     "players_df = players_df.sort_values('Счет', ascending=False)\n",
+    "av_score = np.average(players_df['Счет'])\n",
+    "\n",
+    "players_deviation = np.zeros(len(player_scores))\n",
+    "for i, s in enumerate(players_df['Счет']):\n",
+    "    players_deviation[i] = (s - av_score) / av_score\n",
+    "\n",
+    "players_df.insert(3, \"Отклонение от ср.\", players_deviation)\n",
     "\n",
     "display(players_df)\n",
     "\n",
@@ -421,7 +448,8 @@
     "# Calculate teams table\n",
     "teams_df_schema = {\n",
     "    'Команда': 'str',\n",
-    "    'Ср. счет': 'float32'\n",
+    "    'Ср. счет': 'float32',\n",
+    "    'Ср. отклонение': 'float32'\n",
     "}\n",
     "teams_df = pd.DataFrame(columns=teams_df_schema.keys()).astype(teams_df_schema)\n",
     "for i, t_name in enumerate(teams_scores):\n",
