--- a/notepad.ipynb
+++ b/notepad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,14 @@
     "Dota2Metrics = namedtuple(\n",
     "    'Dota2Metrics',\n",
     "    ['part_number', 'has_winned', 'kills', 'assists', 'deaths', 'gold_per_minute', 'hero_damage']\n",
+    ")\n",
+    "\n",
+    "Cs2Metrics = namedtuple('Cs2Metrics',\n",
+    "    ['part_number', 'has_winned', 'kills', 'deaths', 'assists', 'hs_percentage']\n",
+    ")\n",
+    "\n",
+    "LolMetrics = namedtuple('LolMetrics',\n",
+    "    ['part_number', 'has_winned', 'kills', 'deaths', 'assists', 'cs_per_minute', 'vision_score']\n",
     ")\n",
     "\n",
     "def calc_score_dota2(v: Dota2Metrics):\n",
@@ -36,19 +44,30 @@
     "    )\n",
     "\n",
     "\n",
-    "def calc_score_cs2(v):\n",
-    "    ...\n",
+    "def calc_score_cs2(v: Cs2Metrics):\n",
+    "    return (\n",
+    "        v.kills * 2 +\n",
+    "        v.deaths * (-1.0) +\n",
+    "        v.assists * 1.5 +\n",
+    "        v.hs_percentage * 0.02\n",
+    "    )\n",
     "\n",
     "\n",
-    "def calc_score_lol(v):\n",
-    "    ...\n",
+    "def calc_score_lol(v: LolMetrics):\n",
+    "    return (\n",
+    "        v.kills * 2 +\n",
+    "        v.deaths * (-1) +\n",
+    "        v.assists * 1.5 +\n",
+    "        v.cs_per_minute * 0.01 +\n",
+    "        v.vision_score * 0.05\n",
+    "    )\n",
     "\n",
     "\n",
-    "def calc_total_score(m: Dota2Metrics):\n",
+    "def calc_total_score(m, f):\n",
     "    MATCH_PART_FACTOR = 10.0\n",
     "    WIN_LOSE_FACTOR = np.array([0.5, 1.0], np.float32)\n",
     "\n",
-    "    s = np.array(list(map(calc_score_dota2, m)), np.float32)\n",
+    "    s = np.array(list(map(f, m)), np.float32)\n",
     "\n",
     "    part_ns = np.array(\n",
     "        list(map(attrgetter(\"part_number\"), m)),\n",
@@ -69,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dataset\n",
+    "# Dota 2 Dataset\n",
     "teams_boom = {\n",
     "    \"Pakazs\": [ Dota2Metrics(0, 0, 8, 10, 1, 710, 20577) ],\n",
     "    \"SLATEM$\": [ Dota2Metrics(0, 0, 10, 9, 1, 706, 20927) ],\n",
@@ -135,17 +154,36 @@
     "    ]\n",
     "}\n",
     "\n",
-    "teams = {\n",
+    "dota_teams = {\n",
     "    \"BOOM Esports\": teams_boom,\n",
     "    \"Mad Kings\": teams_mad_kings,\n",
     "    \"BocaJuniors\": team_boca_juniors,\n",
     "    \"Infinity\": team_infinity\n",
-    "}"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cs 2 Dataset\n",
+    "...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lol dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -415,10 +453,10 @@
     "player_teams = {}\n",
     "teams_scores = defaultdict(lambda: 0.0)\n",
     "\n",
-    "for team_name in teams:\n",
-    "    team = teams[team_name]\n",
+    "for team_name in dota_teams:\n",
+    "    team = dota_teams[team_name]\n",
     "    for player_name in team:\n",
-    "        player_scores[player_name] = calc_total_score(team[player_name])\n",
+    "        player_scores[player_name] = calc_total_score(team[player_name], calc_score_dota2)\n",
     "        player_teams[player_name] = team_name\n",
     "        teams_scores[team_name] += player_scores[player_name]\n",
     "    teams_scores[team_name] /= len(team)\n",
@@ -449,7 +487,6 @@
     "teams_df_schema = {\n",
     "    'Команда': 'str',\n",
     "    'Ср. счет': 'float32',\n",
-    "    'Ср. отклонение': 'float32'\n",
     "}\n",
     "teams_df = pd.DataFrame(columns=teams_df_schema.keys()).astype(teams_df_schema)\n",
     "for i, t_name in enumerate(teams_scores):\n",
